Grunt tune. Based on 'Authenticator' configuration

--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,10 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-        <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
-        <!-- endbuild -->
+        <link rel="stylesheet" href="styles/gaia/buttons.css">
+        <link rel="stylesheet" href="styles/gaia/headers.css">
+        <link rel="stylesheet" href="styles/gaia/progress_activity.css">
 </head>
   <body data-ng-csp data-ng-app="findMyCarApp">
     <div class="container" data-ng-view=""></div>
