--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/car-compass.js"></script>
         <script src="scripts/controllers/locate-car.js"></script>
+        <script src="scripts/services/geolocation.js"></script>
         <!-- endbuild -->
 </body>
 </html>
