Compass view. Draft

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="stylesheet" href="styles/compass.css">
         <link rel="stylesheet" href="styles/gaia/buttons.css">
         <link rel="stylesheet" href="styles/gaia/headers.css">
         <link rel="stylesheet" href="styles/gaia/progress_activity.css">
