underscore and geolocation proof of concept

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
         <script src="bower_components/brick/dist/core/core.min.js"></script>
         <script src="bower_components/brick/dist/tooltip/tooltip.min.js"></script>
         <script src="bower_components/brick/dist/flipbox/flipbox.min.js"></script>
+        <script src="bower_components/underscore/underscore-min.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
