--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,8 @@
     <div class="container" data-ng-view=""></div>
 
         <!-- build:js scripts/modules.js -->
-        <script src="bower_components/angular/angular.js"></script>
+        <script src="bower_components/angular/angular.min.js"></script>
+        <script src="bower_components/angular-route/angular-route.min.js"></script>
         <script src="bower_components/angular-resource/angular-resource.js"></script>
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
