--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
       <!-- endbuild -->
   </head>
   <body data-ng-csp data-ng-app="findMyCarApp">
-    <div class="container" data-ng-view=""></div>
+    <div class="container" data-ng-view="" data-ng-animate=" 'wave' "></div>
 
         <!-- build:js scripts/modules.js -->
         <script src="bower_components/angular/angular.min.js"></script>
