--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,12 @@
       <!-- endbuild -->
   </head>
   <body data-ng-csp data-ng-app="findMyCarApp">
+    <div class="parallax">
+        <img src="images/parallax_routes.png" alt="routes"/>
+        <img src="images/parallax_goals.png" alt="goals"/>
+    </div>
+
+
     <div class="container" data-ng-view="" data-ng-animate=" 'wave' "></div>
 
         <!-- build:js scripts/modules.js -->
