GPS location service is reeeeaaaalllly slow. To improve usability: accuracy decreased, 'waiting message' updated

--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Find my car</title>
     <meta name="description" content="">
-      <!-- build:css(.tmp) styles/main.css -->
     <meta name="viewport" content="width=device-width">
+    <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/compass.css">
     <link rel="stylesheet" href="styles/gaia/buttons.css">
