Bower dependencies updated. Brick removed. There is no need to be linked to RC library for a small tooltip

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Find my car</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,user-scalable=no">
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/compass.css">
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="styles/gaia/util.css">
     <link rel="stylesheet" href="styles/gaia/headers.css">
     <link rel="stylesheet" href="styles/gaia/progress_activity.css">
-    <link rel="stylesheet" href="bower_components/brick/dist/tooltip/tooltip.min.css">
-    <link rel="stylesheet" href="bower_components/brick/dist/flipbox/flipbox.min.css">
+    <link rel="stylesheet" href="bower_components/angular/angular-csp.css">
       <!-- endbuild -->
   </head>
   <body data-ng-csp data-ng-app="findMyCarApp">
@@ -33,9 +32,6 @@
         <script src="bower_components/angular-cookies/angular-cookies.js"></script>
         <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
-        <script src="bower_components/brick/dist/core/core.min.js"></script>
-        <script src="bower_components/brick/dist/tooltip/tooltip.min.js"></script>
-        <script src="bower_components/brick/dist/flipbox/flipbox.min.js"></script>
         <script src="bower_components/underscore/underscore-min.js"></script>
         <script src="bower_components/parallax/deploy/parallax.min.js"></script>
         <!-- endbuild -->
